Fixed dark mode vs light mode custom blue links

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -91,10 +91,15 @@
   max-height: 90px;
   overflow-y: auto;
 }
-
 .text-clickable-link-blue {
-    color: #abc4ed !important;
+    color: rgb(59 130 246 / 1);
 }
 .text-clickable-link-blue:hover, .text-clickable-link:active {
-    color: rgb(59 130 246 / 1) !important;
+   color: rgb(29 78 216 / 1);
+}
+.dark .text-clickable-link-blue {
+    color: #abc4ed;
+}
+.dark .text-clickable-link-blue:hover, .text-clickable-link:active {
+    color: rgb(59 130 246 / 1);
 }
